docs/assets/scss/_content.scss
//
// Automatically style Markdown-based tables like a Bootstrap `.table`.
//

.bd-content {
  > table {
    display: block;
    width: 100%;
    max-width: 100%;
    overflow-y: auto;
    margin-bottom: $spacer;

    // Cells
    > thead,
    > tbody,
    > tfoot {
      > tr {
        > th,
        > td {
          padding: $table-cell-padding;
          line-height: $line-height;
          vertical-align: top;
          border: 1px solid $table-border-color;

          > p:last-child {
            margin-bottom: 0;
          }
        }
      }
    }

    // Prevent breaking of code (e.g., Grunt tasks list)
    td:first-child > code {
      white-space: nowrap;
    }
  }
}

//
// Docs sections
//

.bd-content {
  > h2:not(:first-child) {
    margin-top: 3rem;
  }

  > h3 {
    margin-top: 1.5rem;
  }

  > ul li,
  > ol li {
    margin-bottom: .25rem;
  }
}

.bd-title {
  @include media-breakpoint-up(sm) {
    font-size: 3rem;

    + p {
      font-size: 1.25rem;
      font-weight: 300;
    }
  }
}


//
// Markdown generated ToC
//

#markdown-toc {
  // Hide the first child li because it's always going to be "Contents".
  > li:first-child {
    display: none;
  }

  ul {
    padding-left: 2rem;
    margin-top: .25rem;
    margin-bottom: .25rem;
  }
}

